# data-pre-pipeline

./: README.md  label3_first100.py  label3_first100_run.sh  label3_from100.py  label3_from100_run.sh  pyproject.toml
configs/: default.yaml
examples/: videos.txt
outputs/: dry_run.jsonl
scripts/: run_caption_pipeline.sh
src/video_caption_preprocessor/: __init__.py  cli.py  pipeline.py  schemas.py  utils.py
src/video_caption_preprocessor/captioners/: __init__.py  openrouter_qwen_vl.py
src/video_caption_preprocessor/exporters/: __init__.py  csv_exporter.py  jsonl.py  sft_chat.py
src/video_caption_preprocessor/qa/: __init__.py  deterministic.py  model_review.py
